--- a/styles/style.css
+++ b/styles/style.css
@@ -103,3 +103,25 @@ header {
     background: #172948;
 
 }
+
+/**FOOTER**/
+
+footer {
+
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 10vh;
+    background-color: #86DEB7;
+    margin-top: auto;
+}
+
+.foot {
+
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    font-size: 15px;
+    font-weight: bold;
+    color: #1d3557;
+}
