--- a/styles/style.css
+++ b/styles/style.css
@@ -125,3 +125,48 @@ footer {
     font-weight: bold;
     color: #1d3557;
 }
+
+.container-list {
+
+
+    align-items: center;
+    background-color: #86DEB7;
+    border-radius: 10px;
+    margin: 30px auto;
+    max-width: 40%;
+    height: 80px;
+    padding: 15px;
+}
+
+.flex {
+
+    display: flex;
+
+
+}
+
+input {
+
+    width: 100%;
+    height: 50px;
+    border: 2px solid #cccccc;
+    border-radius: 5px;
+    padding: 15px;
+    outline: none;
+}
+
+.add {
+
+    background-color: #172948;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 17px;
+    margin-left: 5px;
+    padding: 10px 15px;
+
+}
+
