--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ html, body {
 header {
     background-color: #86DEB7;
     width: 100%;
-    height: 160px;
+    height: 140px;
     padding-bottom: 10px;
 }
 
@@ -19,7 +19,7 @@ header {
 .title {
 
     text-align: center;
-    margin-top: 5vh;
+    margin-top: 3vh;
     color: #1f4278;
 }
 
@@ -28,6 +28,18 @@ header {
     text-align: center;
     font-size: 40px;
     color: #1f4278;
+}
+
+.nav {
+
+    justify-content: center;
+    padding: 7px;
+
+}
+
+.nav h5 {
+
+    margin: 4px;
 }
 
 /**FORM**/
@@ -47,7 +59,7 @@ header {
 .form-co {
 
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
 }
 
 .form-co label {
@@ -103,6 +115,25 @@ header {
 
 }
 
+.info {
+
+    text-align: center;
+    padding: 7px;
+    color: #1f4278;
+}
+
+.lien {
+
+
+    text-decoration: none;
+    color: #1f4278;
+}
+
+.lien:hover {
+
+    text-decoration: none;
+}
+
 /**FOOTER**/
 
 footer {
@@ -120,7 +151,7 @@ footer {
     display: flex;
     flex-direction: row;
     margin: auto;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
     color: #1f4278;
 }
@@ -254,6 +285,6 @@ h5 {
     padding: 0px 30px;
     font-weight: normal;
     color: black;
-    
+
 }
 
